--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,11 @@ description = "Code for the SDG benchmarking experiments"
 authors = ["Yury Kashnitsky <y.kashnitskiy@elsevier.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.12"
 pandas = "^1.4.3"
+numpy = "^1.23.3"
+scipy = "^1.9.1"
+scikit-learn = "^1.1.2"
 
 [tool.poetry.dev-dependencies]
 
